Prevent logo changing in high contrast mode
In Windows high contrast mode the logo becomes entirely black with only a white
tick, making it essentially invisible. There's not an easy way of making the
logo high-contrast so instead we can prevent forced-colors from overriding its
styling at all.

--- a/app/webpacker/styles/header/logo.scss
+++ b/app/webpacker/styles/header/logo.scss
@@ -21,6 +21,10 @@
   display: block;
   overflow-x: clip;
 
+  @media (forced-colors: active) {
+    forced-color-adjust: none;
+  }
+
   a {
     text-decoration: none;
     display: block;
